--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     height: 100vh;
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     padding: 0;
     margin: 0;
@@ -10,11 +10,20 @@ body {
     background-color: cornflowerblue;
 }
 
-#main-play-area {
+#title {
+	font-size: 40px;
+    text-align: center;
+    color: #666666;
+    margin: 15px 0 25px 0;
+}
+
+#game {
+    position: relative;
     background-color: black;
     background-image: url(img/space.png);
     height: 600px;
     width: 600px;
+	overflow: hidden;
 }
 
 .game-instructions {
@@ -24,16 +33,24 @@ body {
     top: 0px;
 }
 
-.start-button {
-    position: relative;
+h1 {
+    margin: 0;
+}
+
+#start-button {
+    position: absolute;
+	font-size: 24px;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
-    top: 9rem;
-    left: 15rem;
     cursor: pointer;
 }
 
-.player-shooter {
+#spaceship {
     position: relative;
+    z-index: 100000;
     height: 60px;
     width: 70px;
     left: 20px;
@@ -41,7 +58,7 @@ body {
 }
 
 .laser {
-    position: relative;
+    position: absolute;
     width: 40px;
     height: 30px;
 }
@@ -49,7 +66,7 @@ body {
 .alien {
     height: 60px;
     width: 70px;
-    position: relative;
+    position: absolute;
 }
 
 .alien-transition {
@@ -60,6 +77,6 @@ body {
 .dead-alien {
     height: 60px;
     width: 70px;
-    position: relative;
+    position: absolute;
     opacity: 0;
 }
